Chrome bug update

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <h1 id="header">Erikas galleri</h1>
         <p>
           Klicka på objekten för att kunna läsa mer, eller strosa fritt med
-          <strong>WASD</strong> tangerterna.
+          <strong>WASD</strong> tangerterna. Bästa upplevelsen får du i Firefox,
+          då Chrome kan upplevas långsamt.
         </p>
         <button id="start">Starta</button>
       </div>
